Fix java deprecations